# noiseless

./: .gitignore  .gitmodules  CMakeLists.txt  make.rb
applications/: CMakelists.txt  renderer.cpp  testCompiler.cpp
assets/kernels/: camera_ray_generation.kl  integrator.kl  path_tracer.kl
c_api/include/: allocator_c_api.h  asset_database_c_api.h  integrator_c_api.h  scene_c_api.h  types_c_api.h
c_api/src/: CMakeLists.txt  allocator_c_api.cpp  asset_database_c_api.cpp  integrator_c_api.cpp  path_tracer_c_api.cpp  scene_c_api.cpp
cmake/: CMakeBuildSettings.cmake  CMakeCompiler.cmake  CMakePlatforms.cmake  FindGLEW.cmake  FindGLFW.cmake  Macros.cmake
kernel/: intersect.kl  square.kl  surface_area.kl
output/lib/Debug/: bento_sdk.lib  noiseless_dylib.exp  noiseless_sdk.lib
output/lib/Release/: bento_sdk.lib  noiseless_dylib.exp  noiseless_dylib.lib  noiseless_sdk.lib
sdk/include/asset_compiler/: asset_database_helpers.h  compiler.h  compiler_options.h  kernel_source_helpers.h
sdk/include/gpu_backend/: compute_api.h  compute_types.h
sdk/include/integrators/: camera_ray_generation.h  compute_scene.h  integrator.h  path_tracer.h
sdk/include/model/: box3.h  camera.h  geometry.h  mesh.h  scene.h
sdk/include/resources/: kernel_source.h  types.h
sdk/src/: CMakeLists.txt
sdk/src/asset_compiler/: asset_database_helpers.cpp  compiler.cpp  compiler_options.cpp  kernel_source_helpers.cpp
sdk/src/gpu_backend/: compute_api.cpp
sdk/src/integrators/: camera_ray_generation.cpp  compute_scene.cpp  integrator.cpp  path_tracer.cpp
sdk/src/model/: box3.cpp  geometry.cpp  mesh.cpp  scene.cpp
sdk/src/resources/: kernel_source.cpp  types.cpp
src/base/: const.h  log.cpp  log.h  macro.h  security.cpp  security.h  standard_logger.cpp  standard_logger.h  string_helper.cpp  string_helper.h
src/containers/: array.h  dummy.cpp  vector.h
src/core/: gpu_api.cpp  gpu_api.h
src/geometry/: box3.cpp  box3.h  bvh.cpp  bvh.h  mesh.cpp  mesh.h
src/math/: const.h  ivector3.h  ivector3.inl  matrix4.cpp  matrix4.h  static_values.cpp  stream.h  types.h  vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
src/memory/: allocator.cpp  allocator.h  common.cpp  common.h  system_allocator.cpp  system_allocator.h
src/render/: camera.cpp  camera.h  renderer.cpp  renderer.h
src/tools/: ppm_export.cpp  ppm_export.h
test/: CMakelists.txt  test_cl.cpp  test_renderer.cpp  test_surfacearea.cpp
tests/: CMakelists.txt  testRayGeneration.cpp  testSquare.cpp
